# platform.adaptation.emulator.emulator-yagl

./: CMakeLists.txt  COPYING  LICENSE.MIT  Make.gles_common  Make.rules  Makefile  project.config
CMake/: WPCodegenTarget.cmake
EGL/: CMakeLists.txt  INSTALL  Makefile  README  wayland-drm.c  wayland-drm.h  yagl_backend.h  yagl_bimage.c  yagl_bimage.h  yagl_client_image.c  yagl_context.c  yagl_context.h  yagl_display.c  yagl_display.h  yagl_dri2.c  yagl_egl_calls.c  yagl_egl_calls.in  yagl_egl_state.c  yagl_egl_state.h  yagl_fence.c  yagl_fence.h  yagl_gles_context.c  yagl_gles_image.c  yagl_gles_utils.c  yagl_host_egl_calls.c  yagl_host_egl_calls.h  yagl_image.c  yagl_image.h  yagl_log.c  yagl_malloc.c  yagl_native_display.c  yagl_native_display.h  yagl_native_drawable.h  yagl_native_platform.c  yagl_native_platform.h  yagl_offscreen.c  yagl_offscreen_image.c  yagl_offscreen_image.h  yagl_offscreen_image_pixmap.c  yagl_offscreen_image_pixmap.h  (+29 more)
EGL/gbm/: yagl_gbm_display.c  yagl_gbm_pixmap.c  yagl_gbm_platform.c  yagl_gbm_window.c
EGL/tizen/: yagl_tizen_display.c  yagl_tizen_display.h  yagl_tizen_native_image.c  yagl_tizen_native_image.h  yagl_tizen_pbuffer.c  yagl_tizen_pbuffer.h  yagl_tizen_platform.c  yagl_tizen_platform.h  yagl_tizen_window.c  yagl_tizen_window.h
EGL/wayland/: yagl_wayland_display.c  yagl_wayland_display.h  yagl_wayland_pbuffer.c  yagl_wayland_pbuffer.h  yagl_wayland_platform.c  yagl_wayland_window.c  yagl_wayland_window.h
EGL/x11/: yagl_dri2.c  yagl_dri3.c  yagl_dri3.h  yagl_x11_display.c  yagl_x11_drawable.c  yagl_x11_platform.c
GLES_common/: CMakeLists.txt  Makefile  yagl_gles_array.c  yagl_gles_array.h  yagl_gles_buffer.c  yagl_gles_buffer.h  yagl_gles_calls.c  yagl_gles_calls.in  yagl_gles_context.c  yagl_gles_context.h  yagl_gles_framebuffer.c  yagl_gles_framebuffer.h  yagl_gles_image.c  yagl_gles_pixel_formats.c  yagl_gles_pixel_formats.h  yagl_gles_renderbuffer.c  yagl_gles_renderbuffer.h  yagl_gles_sampler.c  yagl_gles_sampler.h  yagl_gles_texture.c  yagl_gles_texture.h  yagl_gles_texture_unit.c  yagl_gles_texture_unit.h  yagl_gles_types.h  yagl_gles_utils.c  yagl_gles_utils.h  yagl_gles_validate.c  yagl_gles_validate.h  yagl_gles_vertex_array.c  yagl_host_gles_calls.c  yagl_host_gles_calls.h  yagl_host_gles_calls.h.in  yagl_pixel_format.h  yagl_transport_gl.h
GLESv1_CM/: CMakeLists.txt  Makefile  yagl_gles1_calls.c  yagl_gles1_calls.in  yagl_gles1_context.c  yagl_gles1_interface.c  yagl_host_gles1_calls.c  yagl_host_gles1_calls.h
GLESv2/: CMakeLists.txt  Makefile  dummy.c  yagl_gles2_calls.c  yagl_gles2_calls.in  yagl_gles2_context.c  yagl_gles2_context.h  yagl_gles2_interface.c  yagl_gles2_program.c  yagl_gles2_program.h  yagl_gles2_shader.c  yagl_gles2_shader.h  yagl_gles2_utils.c  yagl_gles2_utils.h  yagl_gles2_validate.c  yagl_gles2_validate.h  yagl_gles3_buffer_binding.c  yagl_gles3_buffer_binding.h  yagl_gles3_calls.c  yagl_gles3_context.c  yagl_gles3_context.h  yagl_gles3_program.c  yagl_gles3_program.h  yagl_gles3_sync.h  yagl_gles3_transform_feedback.c  yagl_gles3_transform_feedback.h  yagl_gles3_validate.c  yagl_gles3_validate.h  yagl_glsl_lexer.l  yagl_glsl_parser.y  yagl_glsl_state.c  yagl_glsl_state.h  yagl_host_gles2_calls.c  yagl_host_gles2_calls.h  yagl_texcompress.c  yagl_texcompress_etc2.c
dummy/: CMakeLists.txt  gles2_dummy.c
gbm/: CMakeLists.txt  yagl_gbm.c
include/: wayland-drm.h  yagl_batch.h  yagl_batch_gl.h  yagl_byte_order.h  yagl_client_interface.h  yagl_export.h  yagl_gbm.h  yagl_gles_context.h  yagl_gles_image.h  yagl_gles_utils.h  yagl_impl.h  yagl_ioctl.h  yagl_log.h  yagl_malloc.h  yagl_marshal.h  yagl_marshal_egl.h  yagl_marshal_gl.h  yagl_mem.h  yagl_mem_egl.h  yagl_mem_gl.h  yagl_platform.h  yagl_render.h  yagl_sharegroup.h  yagl_state.h  yagl_tizen_egl.h  yagl_transport.h  yagl_transport_gl1.h  yagl_transport_gl2.h  yagl_types.h  yagl_utils.h  yagl_version.h
install/: replace.awk  replace.sh
packaging/: 95-tizen-emulator.rules  emul-opengl-yagl.service  emulator-yagl.spec  opengl-es-setup-yagl-env.sh  virtgl.sh  yagl.sh
pkgconfig/: wayland-egl.pc.in
scripts/: gen-yagl-calls.py  gen-yagl-calls.sh  update-all-generated.sh
udev/: 99-yagl.rules.in  CMakeLists.txt
wayland-drm/: wayland-drm.c
